--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: string_templates
 description: A simple library for handling string templates
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/navitel-dev/string-templates
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  sprintf: "^4.0.0"
+  sprintf: ^6.0.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.14.4
+  pedantic: ^1.11.0
+  test: ^1.16.8
